--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles.css">
-    <script src="./index.js" />
+    <script src="./index.js"></script>
 </head>
 
 <body>
@@ -47,7 +47,7 @@
 
     </div>
 
-    <!-- <script src="./index.js" /> -->
+
 </body>
 
 </html>
