--- a/index.html
+++ b/index.html
@@ -15,42 +15,45 @@
     <header class="header">
         <div class="header-container">
             <div class="heading-cover">
-            <h1 class="title">Movie Search</h1>
-            <div class="search-input-container">
-                <label for="search">
-                    <input type="text" id="search" placeholder="Search">
-                </label>
-                <i class="fa-solid fa-magnifying-glass" id="search-icon"></i>
-            </div>
+                <h1 class="title">Movie Search</h1>
+                <div class="search-input-container">
+                    <label for="search">
+                        <input type="text" id="search" placeholder="Search">
+                    </label>
+                    <i class="fa-solid fa-magnifying-glass" id="search-icon"></i>
+                </div>
             </div>
         </div>
     </header>
-
-    <div id="loading"></div>
-    <div id="card-grid-container">
-        <!-- <div class="card">
-            <img class="card-img"
-                src="https://plus.unsplash.com/premium_photo-1719529320784-62161f2728d2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxfHx8ZW58MHx8fHx8" />
-            <div class="card-overlay flex-column">
-                <div class="flex-center flex-wrap">
-                    <h2 class="card-overlay-heading">Batman</h2>
-                </div>
-                <div class="flex-around">
-                    <i class="fa-solid fa-clock movie__info--icon" aria-hidden="true"></i>
-                    <span>123</span>
-                </div>
-                <div class="flex-around">
-                    <i class="fa-solid fa-star movie__info--icon" aria-hidden="true"></i>
-                    <span>4.5</span>
-                </div>
-                <div class="flex-around">
-                    <i class="fa-solid fa-earth-americas movie__info--icon" aria-hidden="true"></i>
-                    <span>4.5</span>
+    <main class="main-container">
+        <div class="loading-overlay">
+            <div id="loading"></div>
+        </div>
+        <div id="card-grid-container">
+            <div class="card">
+                <img class="card-img"
+                    src="https://plus.unsplash.com/premium_photo-1719529320784-62161f2728d2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxfHx8ZW58MHx8fHx8" />
+                <div class="card-overlay flex-column">
+                    <div class="flex-center flex-wrap">
+                        <h2 class="card-overlay-heading">Batman</h2>
+                    </div>
+                    <div class="flex-around">
+                        <i class="fa-solid fa-clock movie__info--icon" aria-hidden="true"></i>
+                        <span>123</span>
+                    </div>
+                    <div class="flex-around">
+                        <i class="fa-solid fa-star movie__info--icon" aria-hidden="true"></i>
+                        <span>4.5</span>
+                    </div>
+                    <div class="flex-around">
+                        <i class="fa-solid fa-earth-americas movie__info--icon" aria-hidden="true"></i>
+                        <span>4.5</span>
+                    </div>
                 </div>
             </div>
-        </div> -->
 
-    </div>
+        </div>
+    </main>
     <script src="./index.js"></script>
 </body>
 
