no results found message added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     <div class="loading-overlay">
         <div id="loading"></div>
     </div>
+    <div id="no-results-container">
+        <div class="no-result-text">
+            <h2 class="no-results-header">No results found</h2>
+        </div>
+    </div>
     <main class="main-container">
         <div id="card-grid-container">
             <div class="card">
