--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <main class="main-container">
         <div id="card-grid-container">
-            <div class="card">
+            <!-- <div class="card">
                 <img class="card-img"
                     src="https://plus.unsplash.com/premium_photo-1719529320784-62161f2728d2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxfHx8ZW58MHx8fHx8" />
                 <div class="card-overlay flex-column">
@@ -55,7 +55,7 @@
                         <span>4.5</span>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </main>
