--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </div>
     <main class="main-container">
         <div id="card-grid-container">
-            <!-- <div class="card">
-                <img class="card-img"
+            <div class="card">
+                <img class="card-img" alt="movie card"
                     src="https://plus.unsplash.com/premium_photo-1719529320784-62161f2728d2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxfHx8ZW58MHx8fHx8" />
                 <div class="card-overlay flex-column">
                     <div class="flex-center flex-wrap">
@@ -55,7 +55,12 @@
                         <span>4.5</span>
                     </div>
                 </div>
-            </div> -->
+                <div class="card-action">
+                    <button class="card-btn-more-details">
+                        More Details
+                    </button>
+                </div>
+            </div>
 
         </div>
     </main>
