--- a/movie-details/index.html
+++ b/movie-details/index.html
@@ -1,12 +1,17 @@
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Movie Details</title>
-        <link rel="stylesheet" href="./styles.css">
-        <link rel="stylesheet" href="../../styles.css">
-    </head>
-    <body>
 
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Movie Details</title>
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="../../styles.css">
+</head>
+
+<body>
+
+    <script type="module" src="../index.js"></script>
+    <script type="module" src="./index.js"></script>
+</body>
+
 </html>
