--- a/movie-details/index.html
+++ b/movie-details/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Details</title>
+    <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="../../styles.css">
 </head>
 
 <body>
+    <div id="movie-detail-overlay">
+
+    </div>
 
     <script type="module" src="../index.js"></script>
     <script type="module" src="./index.js"></script>
