--- a/movie-details/index.html
+++ b/movie-details/index.html
@@ -4,14 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Details</title>
-    <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-    <div id="movie-detail-overlay">
-
+    <div class="loading-overlay">
+        <div id="loading"></div>
     </div>
+    <!-- <header class="header">
+        <div class="header-row">
+            <h1 class="header-title">Batman Begins</h1>
+            <div class="rating-container">
+                <img class="rating-img" src="../assets/classification-pg-square.png" alt="pg rating">
+            </div>
+        </div>
+        <h3 class="header-subtitle">Director: Christopher Nolan</h3>
+        <h4 class="header-genre-text">Action, Crime, Drama</h4>
+    </header>
+    <main id="main-container">
+        <div class="main-container-content">
+            <h2 class="plot-title">Plot</h2>
+            <p class="plot-text">
+                After witnessing his parents' death, billionaire Bruce Wayne learns the art of fighting to confront
+                injustice. When he returns to Gotham as Batman, he must stop a secret society that intends to destroy
+                the city.
+            </p>
+            <div class="awards-container">
+                <h2 class="award-title">Awards <i class="fa-regular fa-star"></i></h2>
+                <h3>Nominated for 1 Oscar. 15 wins & 79 nominations total</h3>
+            </div>
+            <div class="action-container">
+                <Button id="back">
+                    Back to Search
+                </Button>
+                <Button id="btn-trailer">
+                    Search Trailers
+                </Button>
+            </div>
+        </div>
+    </main> -->
 
     <script type="module" src="../index.js"></script>
     <script type="module" src="./index.js"></script>
